Fixed dangling pointer crash

--- a/ui/inventory.ui
+++ b/ui/inventory.ui
@@ -21,106 +21,6 @@
   </property>
   <layout class="QVBoxLayout" name="mainLayout">
    <item>
-    <widget class="QGroupBox" name="logEntryPanel">
-     <property name="title">
-      <string>Log Entry Panel</string>
-     </property>
-     <layout class="QGridLayout" name="logEntryLayout">
-      <item row="2" column="0">
-       <widget class="QLabel" name="diameterLabel">
-        <property name="text">
-         <string>Diameter (in):</string>
-        </property>
-       </widget>
-      </item>
-      <item row="5" column="0">
-       <widget class="QLabel" name="locationLabel">
-        <property name="text">
-         <string>Location:</string>
-        </property>
-       </widget>
-      </item>
-      <item row="3" column="0">
-       <widget class="QLabel" name="costLabel">
-        <property name="text">
-         <string>Cost ($):</string>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="3">
-       <widget class="QSpinBox" name="lengthIn"/>
-      </item>
-      <item row="2" column="1">
-       <widget class="QSpinBox" name="diameterIn"/>
-      </item>
-      <item row="1" column="1">
-       <widget class="QSpinBox" name="lengthFt"/>
-      </item>
-      <item row="0" column="1">
-       <widget class="QLineEdit" name="speciesEntry"/>
-      </item>
-      <item row="3" column="1">
-       <widget class="QDoubleSpinBox" name="costValue"/>
-      </item>
-      <item row="0" column="0">
-       <widget class="QLabel" name="speciesLabel">
-        <property name="text">
-         <string>Species:</string>
-        </property>
-       </widget>
-      </item>
-      <item row="4" column="1">
-       <widget class="QSpinBox" name="qualityValue">
-        <property name="maximum">
-         <number>10</number>
-        </property>
-       </widget>
-      </item>
-      <item row="7" column="0" colspan="3">
-       <widget class="QPushButton" name="addLogButton">
-        <property name="text">
-         <string>Add Log</string>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="2">
-       <widget class="QLabel" name="lengthInLabel">
-        <property name="text">
-         <string>Inches:</string>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="0">
-       <widget class="QLabel" name="lengthFtLabel">
-        <property name="text">
-         <string>Length (ft):</string>
-        </property>
-       </widget>
-      </item>
-      <item row="4" column="0">
-       <widget class="QLabel" name="qualityLabel">
-        <property name="text">
-         <string>Quality (1–5):</string>
-        </property>
-       </widget>
-      </item>
-      <item row="6" column="0">
-       <widget class="QLabel" name="label">
-        <property name="text">
-         <string>Drying:</string>
-        </property>
-       </widget>
-      </item>
-      <item row="6" column="1">
-       <widget class="QComboBox" name="dryingComboBox"/>
-      </item>
-      <item row="5" column="1">
-       <widget class="QLineEdit" name="locationEntry"/>
-      </item>
-     </layout>
-    </widget>
-   </item>
-   <item>
     <widget class="QTabWidget" name="inventoryTabs">
      <property name="tabPosition">
       <enum>QTabWidget::North</enum>
@@ -256,6 +156,109 @@
          <property name="selectionBehavior">
           <enum>QAbstractItemView::SelectRows</enum>
          </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QGroupBox" name="logEntryPanel">
+         <property name="title">
+          <string>Log Entry</string>
+         </property>
+         <layout class="QGridLayout" name="logEntryLayout">
+          <item row="2" column="0">
+           <widget class="QLabel" name="diameterLabel">
+            <property name="text">
+             <string>Diameter (in):</string>
+            </property>
+           </widget>
+          </item>
+          <item row="5" column="0">
+           <widget class="QLabel" name="locationLabel">
+            <property name="text">
+             <string>Location:</string>
+            </property>
+           </widget>
+          </item>
+          <item row="3" column="0">
+           <widget class="QLabel" name="costLabel">
+            <property name="text">
+             <string>Cost ($):</string>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="3">
+           <widget class="QSpinBox" name="lengthIn"/>
+          </item>
+          <item row="2" column="1">
+           <widget class="QSpinBox" name="diameterIn"/>
+          </item>
+          <item row="1" column="1">
+           <widget class="QSpinBox" name="lengthFt"/>
+          </item>
+          <item row="0" column="1">
+           <widget class="QLineEdit" name="speciesEntry"/>
+          </item>
+          <item row="3" column="1">
+           <widget class="QDoubleSpinBox" name="costValue"/>
+          </item>
+          <item row="0" column="0">
+           <widget class="QLabel" name="speciesLabel">
+            <property name="text">
+             <string>Species:</string>
+            </property>
+           </widget>
+          </item>
+          <item row="4" column="1">
+           <widget class="QSpinBox" name="qualityValue">
+            <property name="minimum">
+             <number>1</number>
+            </property>
+            <property name="maximum">
+             <number>5</number>
+            </property>
+           </widget>
+          </item>
+          <item row="7" column="0" colspan="3">
+           <widget class="QPushButton" name="addLogButton">
+            <property name="text">
+             <string>Add Log</string>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="2">
+           <widget class="QLabel" name="lengthInLabel">
+            <property name="text">
+             <string>Inches:</string>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="0">
+           <widget class="QLabel" name="lengthFtLabel">
+            <property name="text">
+             <string>Length (ft):</string>
+            </property>
+           </widget>
+          </item>
+          <item row="4" column="0">
+           <widget class="QLabel" name="qualityLabel">
+            <property name="text">
+             <string>Quality (1–5):</string>
+            </property>
+           </widget>
+          </item>
+          <item row="6" column="0">
+           <widget class="QLabel" name="label">
+            <property name="text">
+             <string>Drying:</string>
+            </property>
+           </widget>
+          </item>
+          <item row="6" column="1">
+           <widget class="QComboBox" name="dryingComboBox"/>
+          </item>
+          <item row="5" column="1">
+           <widget class="QLineEdit" name="locationEntry"/>
+          </item>
+         </layout>
         </widget>
        </item>
       </layout>
