--- a/ui/inventory.ui
+++ b/ui/inventory.ui
@@ -98,12 +98,12 @@
          <item alignment="Qt::AlignRight">
           <widget class="QLabel" name="label_5">
            <property name="text">
-            <string>Radius: </string>
+            <string>Diameter</string>
            </property>
           </widget>
          </item>
          <item>
-          <widget class="QDoubleSpinBox" name="logRadiusMin">
+          <widget class="QDoubleSpinBox" name="logDiameterMin">
            <property name="suffix">
             <string> in</string>
            </property>
@@ -117,7 +117,7 @@
           </widget>
          </item>
          <item>
-          <widget class="QDoubleSpinBox" name="logRadiusMax">
+          <widget class="QDoubleSpinBox" name="logDiameterMax">
            <property name="suffix">
             <string> in</string>
            </property>
@@ -163,7 +163,7 @@
          <property name="title">
           <string>Log Entry</string>
          </property>
-         <layout class="QGridLayout" name="logEntryLayout" rowstretch="0,0,0,0,0,0,0,0,0,0,0">
+         <layout class="QGridLayout" name="logEntryLayout" rowstretch="0,0,0">
           <item row="0" column="4">
            <widget class="QLabel" name="locationLabel">
             <property name="text">
